--- a/src/vsfilter/VSFilter.vcxproj
+++ b/src/vsfilter/VSFilter.vcxproj
@@ -23,14 +23,14 @@
     <ProjectGuid>{F671100C-469F-4723-AAC4-B7FE4F5B8DC4}</ProjectGuid>
     <Keyword>AtlProj</Keyword>
     <RootNamespace>VSFilter</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <UseOfMfc>Static</UseOfMfc>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -38,7 +38,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -46,7 +46,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <UseOfMfc>Static</UseOfMfc>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -54,7 +54,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -94,6 +94,18 @@
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|x64'">VSFilterMod</TargetName>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|x64'">VSFilterMod</TargetName>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|Win32'">
+    <IncludePath>D:\Dev\C\DelogoHD\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'">
+    <IncludePath>D:\Dev\C\DelogoHD\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|x64'">
+    <IncludePath>D:\Dev\C\DelogoHD\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|x64'">
+    <IncludePath>D:\Dev\C\DelogoHD\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>WIN32;NDEBUG;ISOLATION_AWARE_ENABLED;_WIN32_WINNT=0x0600;_VSMOD;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -111,7 +123,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;strmiids.lib;vfw32.lib;Version.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>VSFilterMod.def</ModuleDefinitionFile>
       <AdditionalOptions>/MERGE:_RDATA=.rdata /MERGE:_rdata=.rdata /MERGE:_TEXT64=.text </AdditionalOptions>
     </Link>
     <ResourceCompile>
@@ -137,7 +148,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;strmiids.lib;vfw32.lib;Version.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>VSFilterMod.def</ModuleDefinitionFile>
       <AdditionalOptions>/MERGE:_RDATA=.rdata /MERGE:_rdata=.rdata /MERGE:_TEXT64=.text </AdditionalOptions>
     </Link>
     <ResourceCompile>
@@ -160,7 +170,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;strmiids.lib;vfw32.lib;Version.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>VSFilterMod64.def</ModuleDefinitionFile>
       <AdditionalOptions>/MERGE:_RDATA=.rdata /MERGE:_rdata=.rdata /MERGE:_TEXT64=.text </AdditionalOptions>
     </Link>
     <ResourceCompile>
@@ -182,7 +191,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Winmm.lib;strmiids.lib;vfw32.lib;Version.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <ModuleDefinitionFile>VSFilterMod64.def</ModuleDefinitionFile>
       <AdditionalOptions>/MERGE:_RDATA=.rdata /MERGE:_rdata=.rdata /MERGE:_TEXT64=.text </AdditionalOptions>
     </Link>
     <ResourceCompile>
@@ -190,55 +198,20 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Copy.cpp" />
     <ClCompile Include="csriapi.cpp" />
-    <ClCompile Include="DirectVobSub.cpp" />
-    <ClCompile Include="DirectVobSubFilter.cpp" />
-    <ClCompile Include="DirectVobSubPropPage.cpp" />
     <ClCompile Include="plugins.cpp" />
     <ClCompile Include="StdAfx.cpp" />
-    <ClCompile Include="StyleEditorDialog.cpp" />
-    <ClCompile Include="systray.cpp" />
-    <ClCompile Include="TextInputPin.cpp" />
     <ClCompile Include="vfr.cpp" />
-    <ClCompile Include="VSFilter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="csri.h" />
-    <ClInclude Include="DirectVobSub.h" />
-    <ClInclude Include="DirectVobSubFilter.h" />
-    <ClInclude Include="DirectVobSubPropPage.h" />
-    <ClInclude Include="IDirectVobSub.h" />
-    <ClInclude Include="StyleEditorDialog.h" />
-    <ClInclude Include="systray.h" />
-    <ClInclude Include="TextInputPin.h" />
     <ClInclude Include="vfr.h" />
     <ClInclude Include="VSFilter.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuildStep Include="VSFilter.def">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|x64'">true</ExcludedFromBuild>
-    </CustomBuildStep>
-    <CustomBuildStep Include="VSFilterMod.def">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|x64'">true</ExcludedFromBuild>
-    </CustomBuildStep>
     <None Include="res\Icon_147.ico" />
-    <None Include="VSFilter64.def">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|x64'">true</ExcludedFromBuild>
-    </None>
-    <None Include="VSFilterMod64.def">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release (MOD)|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug (MOD)|Win32'">true</ExcludedFromBuild>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="VSFilter.rc">
